--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 body {
   font-family: 'SF Text', 'Myriad Set Pro', 'SF Pro Icons', 'Helvetica Neue',
     'Helvetica', 'Arial', sans-serif;
-  color: #fff;
+  color: #f5f5f7;
   position: relative;
 }
 a {
@@ -41,7 +41,6 @@ ul {
 a {
   font-family: 'SF Text';
   font-weight: 200;
-  color: #f5f5f7;
   font-size: 14px;
 }
 
@@ -49,7 +48,7 @@ a {
 .navigation {
   position: fixed;
   height: 44px;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   backdrop-filter: saturate(180%) blur(20px);
   top: 0;
   right: 0;
@@ -58,6 +57,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
 }
 
 .main-nav {
@@ -66,25 +66,26 @@ a {
   display: flex;
 }
 
-.main-nav li:first-child {
+.main-nav ul li:first-child {
   margin-left: 0;
 }
-.main-nav a {
+
+.navigation a {
   color: #f5f5f7;
   opacity: 0.8;
   transition: 0.3s ease-in-out;
   line-height: 0;
 }
-.main-nav a:hover {
+.navigation a:hover {
   opacity: 1;
 }
-.main-nav .logo {
+.navigation .logo {
   font-size: 20px;
 }
-.main-nav .fa-search {
+.navigation .fa-search {
   font-size: 18px;
 }
-.main-nav .fa-shopping-bag {
+.navigation .fa-shopping-bag {
   font-size: 18px;
 }
 
@@ -321,11 +322,11 @@ a {
 
 .container {
   max-width: 980px;
+  padding: 0 10px;
 }
 .links {
   color: #1d1d1f;
   background: #f5f5f7;
-  min-width: 1024px;
 }
 
 .dropdown-list a {
@@ -395,30 +396,145 @@ a {
   background: #f5f5f7;
   color: #86868b;
 }
+
 .footer p {
   font-size: 12px;
-  padding: 10px;
+  margin: 0;
 }
 .footer-links {
-  text-align: left;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  padding: 10px 0;
 }
 .footer-links ul {
   display: flex;
-}
-.footer-links ul li {
-  margin-left: 10px;
-}
-.footer-links a {
-  color: #86868b;
+  margin-left: 50px;
 }
 
-@media (max-width: 500px) {
-  .dropdown-list {
+.footer-links a {
+  color: #515154;
+  font-size: 12px;
+  margin-left: 20px;
+}
+
+/* MEdia */
+@media screen and (max-width: 968px) {
+  .product-boxes {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  /* Navigation */
+  .navigation {
+    height: 44px;
+    background: #000000;
+    backdrop-filter: none;
+  }
+  body.nonscroll {
+    overflow: hidden;
+  }
+  .main-nav {
+    display: none;
+  }
+  .main-nav.show {
+    position: absolute;
+
+    top: 44px;
+    padding: 50px 50px;
+    display: block;
+    width: 100%;
+    height: 100vh;
+    background: #000000;
+    text-align: left;
+    border-top: 1px solid #515154;
+  }
+
+  .main-nav.show li {
+    padding: 15px 0;
+    border-bottom: 1px solid #515154;
+  }
+  .main-nav.show li:hover {
+    cursor: pointer;
+  }
+  .main-nav.show li:hover a {
+    color: #ffffff;
+  }
+  .main-nav.show li a {
+    font-size: 17px;
+    font-weight: 200;
+  }
+  .hidden {
     display: none;
   }
 
+  #nav-icon {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    position: relative;
+    transform: rotate(0deg);
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+  }
+
+  #nav-icon span {
+    display: block;
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    background: #fff;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: 0.25s ease-in-out;
+  }
+
+  #nav-icon span:nth-child(1) {
+    top: 0px;
+  }
+
+  #nav-icon span:nth-child(2) {
+    top: 7px;
+  }
+
+  #nav-icon.open span:nth-child(1) {
+    transform: rotate(24deg);
+    top: 3px;
+  }
+
+  #nav-icon.open span:nth-child(2) {
+    transform: rotate(-24deg);
+    top: 3px;
+  }
+
+  /*  */
+
+  /*  */
+  .elements-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .dropdown {
+    padding: 10px;
+    border-bottom: 1px solid #d8d8dd;
+    cursor: pointer;
+    position: relative;
+  }
+  .icon-plus {
+    position: absolute;
+    right: 10px;
+  }
+
+  /* dropdown
+     */
+  .dropdown-list {
+    display: none;
+  }
+  .dropdown-list a:hover {
+    text-decoration: underline;
+  }
   .show {
     display: block;
   }
